tests/language_tests/pass/0091_implicit_return_returns_nothing.ee
fn helper() {
    let x = 1;
    x = x + 1;
}

fn main() {
    print(helper());
}
