tests/language_tests/fail/0046_for_keyword_as_variable_name.ee
fn main() {
    let for = 1;
}
